istio-manifests/frontend-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: frontend-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - '*'
  - port:
      number: 443
      name: https
      protocol: HTTPS
    hosts:
    - '*'
    tls:
      mode: SIMPLE
      serverCertificate: /etc/istio/ingressgateway-certs/-io-crt.pem
      privateKey: /etc/istio/ingressgateway-certs/-io-key.pem
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend-ingress
spec:
  hosts:
  - '*'
  gateways:
  - frontend-gateway
  http:
  - route:
    - destination:
        host: app-a-service
        port:
          number: 80
        # subset: v1
